<resources>
    <string name="app_name">ZikoBot</string>

    <string name="loading">Loading..</string>

    <!--> Start <-->
    <string name="view_pager_1">With me, your alarm clock is more friendly, I program my favorite music!</string>
    <string name="view_pager_2">I need that you connect to your Spotify® or Deezer® account (requires a premium account)</string>
    <string name="view_pager_3">With your permission, I can also access my music stored locally on your phone.</string>

    <string name="view_pager_1_title">Nice to meet you, I am Zikobot, your musical assistant!</string>
    <string name="view_pager_2_title">Combines your musical accounts</string>
    <string name="view_pager_3_title">No account? No problem for me!</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>

    <string name="tuto">You can create playlists by browsing the music on your phone, or your different musical accounts. Use the 3 dots menu ;)</string>
    <string name="tuto_zik">Supports here to add my favorite songs</string>
    <string name="tuto_not_connected">You are logged out! Fix this here</string>

    <!--> Menu <-->
    <string name="menu_about">About</string>
    <string name="menu_put_add_as_playlist">Add to a playlist</string>
    <string name="menu_add_to_current_play">Add after current playing track</string>
    <string name="menu_add_to_end_of_current_play">Add at the end of current playing track</string>
    <string name="menu_info_artist">See the artist page</string>
    <string name="menu_delete">delete</string>
    <string name="menu_tablature">See guitar tab</string>
    <string name="drawer_filter_network">network</string>

    <string name="action_add_all">Add all</string>


    <!--> Titles <-->
    <string name="activity_music_local">My personal music</string>
    <string name="activity_my_account">My accounts</string>


    <string name="activity_alarm_new">Create a new playlist</string>
    <string name="alarm_hint_hour">Select the hour</string>

    <string name="playlist_hint">Playlist title</string>
    <string name="edit_text_error_name_alarm">Name error</string>
    <string name="tuto_select_track">Select your track</string>
    <string name="activity_music_title">Music choice</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="repeat">Schedule</string>


    <!--> Activity Wake Up <-->
    <string name="stop">Stop</string>


    <!-- ActivityAccount -->
    <string name="connect_with_spotify">Connect to spotify</string>
    <string name="connect">Connection</string>

    <!--> ActivityMusic<-->

    <string name="alarm_fragment_title">You can manage your alarm right here</string>
    <string name="alarm_edit">Alarm at : </string>
    <string name="alarm_add">Validate</string>
    <string name="playlist_total_tracks">%d tracks</string>
    <string name="tracks">track(s)</string>

    <string name="coming_soon">Coming soon...</string>
    <string name="play">Play alarm</string>

    <string name="no_music">Sorry I did not find any music on your phone</string>
    <string name="add_tracks">I need you to add songs to start the alarm</string>
    <string name="permission_local">I need your permission to access your music :) Click here to give me this power ! </string>
    <string name="album">album(s)</string>
    <string name="random_music">Random mode</string>
    <string name="volume_alarm">Volume</string>


    <!-- My account -->
    <string name="SoundCloud">SoundCloud</string>
    <string name="connect_with_SoundCloud">Connect to SoundCloud</string>
    <string name="spotify">Spotify</string>
    <string name="soundcloud">Soundcloud</string>
    <string name="account_type">Account Type :</string>
    <string name="Spotify">Spotify</string>


    <!-- Dialogues -->
    <string name="dialog_title_add_track">Music Alarm</string>
    <string name="select_playlist">Select your playlist</string>
    <string name="no_premium">Sorry, you have no Premium account ... I can not use Spotify without it :(</string>
    <string name="oops">Oops</string>
    <string name="no_m4a_support">Sorry I do not handle that format yet :(</string>
    <string name="dialog_edit_playlist">Edition</string>

    <!-- Widget -->
    <string name="next_alarm">Next alarm : </string>
    <string name="no_alarm">No alarm</string>
    <string name="add_alarm">Click here to add </string>
    <string name="no_active_alarm">No active alarms</string>
    <string name="activate_alarm">Click here to prepare</string>
    <string name="activity_fingerprint">Zikentifier</string>

    <!-- About -->
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">Zikobot, Android musical assistant</string>
    <string name="options">settings</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_deleted">Your playlist have been deleted</string>
    <string name="dialog_options">Settings</string>
    <string name="title_add_playlist">Add to a playlist</string>
    <string name="title_playing">Add to current music</string>
    <string name="alarm_confirm_edit">Your playlist has been updated</string>
    <string name="zmb_activate_alarm">Activate the alarm mode to update it</string>
    <string name="no_result">Sorry, I did not find any results :(</string>
    <string name="title_infos">Informations</string>
    <string name="error_spotify_premium">Tu as besoin d\'un compte Spotify Premium :(</string>
    <string name="error_generic_error">Une erreur est survenue lors de la lecture de la piste</string>
    <string name="error_corrupt_track">Oops spotify m\'indique cette chanson est corrompue :s</string>
    <string name="no_internet">No data, check your connection</string>
    <string name="settings_handle_phone_call">Handle phone call (this will pause the music when you receive a phone call)</string>
    <string name="download_fail">Error while trying to download, please retry. It may be possible this file cannot be downloaded…</string>
    <string name="download_success">Your song has been downloaded</string>
    <string name="account_link_ftu_title">It\'s here I can manage your music accounts ! Don\'t worry I only keep the necessary to play music</string>
    <string name="account_spotify_subtitle">You are a Spotify user? No problem! ( You will need premium to play music )</string>
    <string name="spotifySyncPlaylistsTitle">Select the Spotify playlists you want to synchronize</string>
    <string name="empty_state_playlist">Oh you do not have any playlist yet ? :( You can import some from your accounts or create from scratch. It is right there !</string>
    <string name="spotify_not_connected">Tu n\'es pas connecté à Spotify, clique ici pour régler ça !</string>
    <string name="playlist_create">Créer une playlist</string>
    <string name="playlist_import">Importer</string>
    <string name="playlistCreateTitle">Rentre ici le nom de ta playlist! Tu pourras ajouter les morceaux par la suite en faisant un appui long sur un morceau.</string>
    <string name="addTrackToPlaylistTitle">Dans quelle playlist veux-tu ajouter cette chanson?</string>
    <string name="drawer_filter_recos">Recommendations</string>

</resources>
