<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.alarm.FragmentAlarms">


    <item
        android:id="@+id/action_edit"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:title="@string/dialog_edit_playlist" />
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/ic_play_arrow"
        android:orderInCategory="50"
        app:showAsAction="ifRoom"
        android:title="@string/play" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete"
        app:showAsAction="always" />
</menu>
