<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import
            alias="v"
            type="android.view.View" />

        <variable
            name="itemAlarmVM"
            type="com.startogamu.zikobot.alarm.AlarmVM" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{itemAlarmVM.repeated &amp;&amp; itemAlarmVM.activated  ? v.VISIBLE : v.GONE}">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/tv_monday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:onClick="@{itemAlarmVM.activeMonday}"
                android:textColor="@{itemAlarmVM.mondayActive ? @color/colorAccent : @color/secondaryText}" />

            <TextView
                android:id="@+id/tv_tuesday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday"
                android:onClick="@{itemAlarmVM.activeTuesday}"
                android:textColor="@{itemAlarmVM.tuesdayActive ? @color/colorAccent : @color/secondaryText}" />


            <TextView
                android:id="@+id/tv_wednesday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:onClick="@{itemAlarmVM.activeWed}"
                android:textColor="@{itemAlarmVM.wedActive ? @color/colorAccent : @color/secondaryText}" />

            <TextView
                android:id="@+id/tv_thursday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:onClick="@{itemAlarmVM.activeThursday}"
                android:textColor="@{itemAlarmVM.thursdayActive ? @color/colorAccent : @color/secondaryText}" />

            <TextView
                android:id="@+id/tv_friday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:onClick="@{itemAlarmVM.activeFriday}"
                android:textColor="@{itemAlarmVM.fridayActive ? @color/colorAccent : @color/secondaryText}" />


            <TextView
                android:id="@+id/tv_saturday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday"
                android:onClick="@{itemAlarmVM.activeSaturday}"
                android:textColor="@{itemAlarmVM.saturdayActive ? @color/colorAccent : @color/secondaryText}"/>


            <TextView
                android:id="@+id/tv_sunday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday"
                android:onClick="@{itemAlarmVM.activeSunday}"
                android:textColor="@{itemAlarmVM.sundayActive ? @color/colorAccent : @color/secondaryText}"/>

        </LinearLayout>

    </LinearLayout>
</layout>