<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="settingsBottomFragmentVM"
            type="com.startogamu.zikobot.settings.SettingsBottomFragmentVM" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textStyle="italic"
            android:textSize="18sp"
            android:text="@{settingsBottomFragmentVM.trackVM.title}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_huge"
            android:gravity="center"
            android:orientation="vertical">

            <include
                android:id="@+id/layout_vinyl"
                layout="@layout/layout_vinyl"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:trackVM="@{settingsBottomFragmentVM.trackVM}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:onClick="@{settingsBottomFragmentVM::showArtistPage}"

                android:text="@string/menu_info_artist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:onClick="@{settingsBottomFragmentVM::addTrackToPlaylist}"
                android:text="@string/menu_put_add_as_playlist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"

                android:text="@string/menu_add_to_current_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"

                android:text="@string/menu_add_to_end_of_current_play" />

        </LinearLayout>


        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/ic_clear_white" />
    </RelativeLayout>


</layout>
