<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <import
            alias="v"
            type="android.view.View" />

        <variable
            name="activitySettingsVM"
            type="com.startogamu.zikobot.settings.ActivitySettingsVM" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_spotify_green" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/Spotify"
                    android:textColor="@color/colorSpotify"
                    android:textSize="24sp" />

            </RelativeLayout>

            <com.startogamu.zikobot.core.viewutils.MaterialButtonView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:onClick="@{activitySettingsVM.onButtonConnectClick}"
                android:visibility="@{activitySettingsVM.showSpotifyConnect ? v.VISIBLE :  v.GONE}"
                app:mbv_text="@string/connect"
                app:mbv_text_color="@android:color/white"
                app:mrl_rippleBackground="@color/colorSpotify" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="horizontal"
                android:visibility="@{activitySettingsVM.showSpotifyConnect ? v.GONE :  v.VISIBLE}">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin_medium"
                        android:textColor="@color/colorSpotify" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/account_type"
                            android:textColor="@color/colorSpotify" />

                        <TextView
                            android:id="@+id/tv_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/margin_medium"
                            android:textColor="@color/colorSpotify" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</layout>